--- a/Tugas AndroFundamental/Tugas1/app/src/main/res/values/strings.xml
+++ b/Tugas AndroFundamental/Tugas1/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">Tugas1</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="btn_logout">keluar</string>
+    <string name="hello_home_fragment">haloo fragment\n</string>
+    <string name="log_desc">keluar dari aplikasi?\n</string>
+    <string name="yes">ya</string>
+    <string name="no">tidak</string>
 </resources>
